<resources>
    <string name="app_name" translatable="false">main</string>


    <string name="mine_user_sign_in" translatable="true">签到</string>
    <string name="mine_user_physician_visits" translatable="true">我的问诊</string>
    <string name="mine_user_now" translatable="true">当前问诊</string>
    <string name="mine_user_histroy" translatable="true">历史问诊</string>
    <string name="mine_user_archives" translatable="true">我的档案</string>
    <string name="mine_user_wallet" translatable="true">我的钱包</string>
    <string name="mine_user_collection" translatable="true">我的收藏</string>
    <string name="mine_user_suggestion" translatable="true">被采纳建议</string>
    <string name="mine_user_videos" translatable="true">我的视频</string>
    <string name="mine_user_patient" translatable="true">我的病友圈</string>
    <string name="mine_user_attention" translatable="true">我的关注</string>
    <string name="mine_user_task" translatable="true">我的任务</string>
    <string name="mine_user_settings" translatable="true">设置管理</string>


    <string name="mine_set_settings" translatable="true">设置</string>
    <string name="mine_set_settings_pwd" translatable="true">修改密码</string>
    <string name="mine_set_settings_cache" translatable="true">清除缓存</string>
    <string name="mine_set_settings_brightness" translatable="true">屏幕亮度</string>
    <string name="mine_set_settings_version" translatable="true">版本检测</string>
    <string name="mine_set_settings_help" translatable="true">帮助中心</string>
    <string name="mine_set_settings_about" translatable="true">关于我们</string>
    <string name="mine_set_settings_invite" translatable="true">邀请好友</string>
    <string name="mine_set_settings_exit" translatable="true">退出登录</string>


</resources>
