<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".mine.MineActivity">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mine_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/title_back_iv"
                    style="@style/IV16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/common_icon_back_white_n" />


                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/title_message"
                    style="@style/IV24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/common_nav_message_white_n" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/mine_user_info_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/mine_title">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/mine_user_header_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:placeholderImage="@drawable/boy"
            app:roundAsCircle="true" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/mine_user_name_tv"
            style="@style/TV16White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/mine_user_header_iv" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/mine_user_sign_bt"
            style="@style/BTWhiteSmall"
            android:layout_width="58dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/mine_user_sign_in" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_user_card_rl"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mine_user_info_rl">

        <com.wd.health.view.shadow.ShadowLayout
            android:id="@+id/mine_user_item_sl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hl_cornerRadius="10dp"
            app:hl_dx="0dp"
            app:hl_dy="0dp"
            app:hl_shadowColor="@color/colorAppBlueA"
            app:hl_shadowLimit="10dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/mine_user_item_title"
                    style="@style/TV16Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/mine_user_physician_visits"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/mine_user_now_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mine_user_item_title">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/mine_user_now_iv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:placeholderImage="@drawable/the_current_inquiry"
                        app:roundAsCircle="true" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/TV14Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/mine_user_now_iv"
                        android:text="@string/mine_user_now" />

                    <android.support.v7.widget.AppCompatImageView
                        style="@style/IV24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/my_icon_next_n" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mine_user_histroy_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mine_user_now_rl">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/mine_user_histroy_iv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:placeholderImage="@drawable/historical_inquiry"
                        app:roundAsCircle="true" />

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/TV14Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/mine_user_histroy_iv"
                        android:text="@string/mine_user_histroy" />

                    <android.support.v7.widget.AppCompatImageView
                        style="@style/IV24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/my_icon_next_n" />

                </RelativeLayout>
            </android.support.constraint.ConstraintLayout>


        </com.wd.health.view.shadow.ShadowLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mine_one_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/mine_user_card_rl"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:id="@+id/mine_user_archives_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_archives_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_icon_file_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_archives_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_archives" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_user_wallet_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_wallet_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_icon_wallet_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_wallet_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_histroy" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_user_collection_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_collection_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_button_collection_large_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_collection_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_collection" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_two_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/mine_one_ll"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:id="@+id/mine_user_advice_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_advice_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_icon_advice_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_advice_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_suggestion" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_user_video_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_video_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_icon_video_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_video_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_videos" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_user_circle_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_circle_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_icon_circle_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_circle_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_patient" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_three_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/mine_two_ll"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:id="@+id/mine_user_attention_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_attention_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/common_icon_attention_large_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_attention_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_attention" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_user_task_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_task_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_icon_task_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_task_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_task" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_user_settings_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/mine_user_settings_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/my_icon_set_n" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/TV12Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mine_user_settings_iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/mine_user_settings" />


        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>